# react-native-outguess

./: LICENSE  PERFORMANCE.md  PUBLISH.md  README.md  package.json  react-native-outguess.podspec  react-native.config.js  tsconfig.build.json  tsconfig.json
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  outguess_jni.cpp
android/src/main/java/com/outguess/: OutguessModule.java
cpp/outguess/: outguess.cpp  outguess.h
example/: App.tsx  package.json
ios/: OutguessBridge.m  OutguessModule.swift
java-server/: Dockerfile  README.md  docker-compose.yml  pom.xml
java-server/src/main/java/com/outguess/server/: OutguessServerApplication.java
java-server/src/main/java/com/outguess/server/config/: OutguessConfig.java
java-server/src/main/java/com/outguess/server/controller/: OutguessController.java
java-server/src/main/java/com/outguess/server/exception/: GlobalExceptionHandler.java
java-server/src/main/java/com/outguess/server/model/: OutguessRequest.java  OutguessResponse.java
java-server/src/main/java/com/outguess/server/service/: OutguessDecoder.java  OutguessService.java
java-server/src/main/resources/: application.yml
java-server/src/test/java/com/outguess/server/: OutguessControllerTest.java
src/: OutguessManager.ts  index.ts  types.ts
